--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -59,7 +59,6 @@ jobs:
 
       # download artifact in folder artifact/
       - uses: actions/download-artifact@v3
-      - run: cd artifact
 
       # - name: "install ghostscript"
       #   run: sudo apt-get install -y ghostscript
@@ -108,6 +107,9 @@ jobs:
 
         ## opening a debug console
       - name: Setup upterm session
+        env:
+          # ZENODO_ACCESS_TOKEN: ${{ secrets.ZENODO_ACCESS_TOKEN }}
+          ZENODO_SANDBOX_ACCESS_TOKEN: ${{ secrets.ZENODO_SANDBOX_ACCESS_TOKEN }}
         uses: lhotari/action-upterm@v1
         with:
           limit-access-to-actor: true
