--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -32,7 +32,7 @@ jobs:
       - name: "setup TeX Live (via paolobrasolin)"
         uses: paolobrasolin/setup-texlive-action@v1
         with:
-          profile-path:  ${{ github.workspace }}/.github/tex/profile.minimal.txt
+          profile-path:  ${{ github.workspace }}/.github/tex/profile.basic.txt
           packages-path: ${{ github.workspace }}/.github/tex/packages.test.txt
 
       - name: "test tikz-trackschematic"
