--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -111,7 +111,7 @@ jobs:
       # 1. download artifact in folder artifact/ and move it one level up
       - uses: actions/download-artifact@v3
       - run: |
-          mv ./artifact/tikz-trackschematic-*.zip ./
+          mv ./artifact/tikz-trackschematic-${{needs.create_package.outputs.version}}.zip ./
       
       # 2. install ctan-o-mat
       - name: "setup TeX Live (via paolobrasolin)"
@@ -158,12 +158,14 @@ jobs:
     name: "updates CITATION.cff"
     runs-on: ubuntu-latest
     steps:
-      # 1. checkout the repo for zenodraft/action@0.10.0 to work
+      # 1. checkout the repo
       - name: "checkout"
         uses: actions/checkout@v2
       
+      # 2. update CITATION.cff
       - run: ./build.sh --update-cite ${{needs.publish_zenodo.outputs.doi}}
       
+      # 3. push the change back to master
       - name: push
         uses: github-actions-x/commit@v2.8
         with:
@@ -172,4 +174,5 @@ jobs:
           force-add: 'true'
           files: CITATION.cff
           commit-message: 'updated DOI (via github action)'
-          rebase: 'true' # pull and rebase before commit
+          name: Martin Scheidt
+          email: m.scheidt@tu-bs.de
