--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -176,3 +176,16 @@ jobs:
           commit-message: 'DOI updated to ${{needs.create_package.outputs.version}} (via github action)'
           name: Martin Scheidt
           email: m.scheidt@tu-bs.de
+
+  publish_twitter:
+    needs: [create_package, publish_zenodo]
+    name: "tweet about it!"
+    runs-on: ubuntu-latest
+    steps:
+    - uses: devigned/go-twitter-action@v1
+      with:
+        message: "The version ${{needs.create_package.outputs.version}} of TikZ-trackschematic is available! DOI: https://doi.org/${{needs.publish_zenodo.outputs.doi}}"
+        apiKey: ${{ secrets.TWITTER_API_KEY }}
+        apiKeySecret: ${{ secrets.TWITTER_API_SECRET }}
+        accessToken: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+        accessTokenSecret: ${{ secrets.TWITTER_ACCESS_SECRET }}
