--- a/.github/workflows/zenodo.yaml
+++ b/.github/workflows/zenodo.yaml
@@ -118,7 +118,7 @@ jobs:
         uses: github-actions-x/commit@v2.8
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          push-branch: 'github-action'
+          push-branch: 'master'
           force-add: 'true'
           files: CITATION.cff
           commit-message: 'updated DOI (via github action)'
