--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -12,42 +12,8 @@ on:
 
 ## A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  create_package:
-    name: "create a TeX Live package"
-    runs-on: ubuntu-latest
-    steps:
-      # checkout the repo
-      - name: "checkout"
-        uses: actions/checkout@v3
-
-      # create package and release notes
-      - name: "create tikz-trackschematic package"
-        run: ./build.sh --non-interactive --release v0.7.0
-
-      # upload artifact two share it with other jobs
-      - uses: actions/upload-artifact@v3
-        with:
-          path: tikz-trackschematic-v0.7.0.zip
-          if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`
-
-      - uses: actions/upload-artifact@v3
-        with:
-          path: release-note-v0.7.0.md
-          if-no-files-found: warn # 'warn' or 'ignore' are also available, defaults to `warn`
-
-      - uses: actions/upload-artifact@v3
-        with:
-          path: .github/tex/tikz-trackschematic.pkg
-          if-no-files-found: warn # 'warn' or 'ignore' are also available, defaults to `warn`
-
-      - uses: actions/upload-artifact@v3
-        with:
-          path: .github/zenodo/metadata.json
-          if-no-files-found: warn # 'warn' or 'ignore' are also available, defaults to `warn`
-
-  # This workflow contains a single job called "build"
   debug:
-    needs: create_package
+    # needs: create_package
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -57,8 +23,8 @@ jobs:
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
         uses: actions/checkout@v3
 
-      # download artifact in folder artifact/
-      - uses: actions/download-artifact@v3
+      # # download artifact in folder artifact/
+      # - uses: actions/download-artifact@v3
 
       # - name: "install ghostscript"
       #   run: sudo apt-get install -y ghostscript
@@ -82,11 +48,12 @@ jobs:
       #   with:
       #     package-file: .github/tex/packages.test.txt
       #   ##
-      # - name: "setup TeX Live (via paolobrasolin)"
-      #   uses: paolobrasolin/setup-texlive-action@v1
+      - name: "setup TeX Live (via paolobrasolin)"
+        uses: paolobrasolin/setup-texlive-action@v1
       #   with:
       #     profile-path:  ${{ github.workspace }}/.github/tex/profile.minimal.txt
       #     packages-path: ${{ github.workspace }}/.github/tex/packages.doc.txt
+      - run: tlmgr install ctan-o-mat
 
       # - name: "install tikz-trackschematic"
       #   run: ./build.sh --non-interactive --install-dev
