--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -116,9 +116,7 @@ jobs:
       # 2. install ctan-o-mat
       - name: "setup TeX Live (via paolobrasolin)"
         uses: paolobrasolin/setup-texlive-action@v1
-        with:
-          profile-path:  ${{ github.workspace }}/.github/tex/profile.minimal.txt
-          packages-path: ${{ github.workspace }}/.github/tex/packages.upload.txt
+      - run: tlmgr install ctan-o-mat
 
       # 3. upload new release to CTAN
       - name: CTAN submit
@@ -161,28 +159,31 @@ jobs:
       # 1. checkout the repo
       - name: "checkout"
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.head_ref }}
       
       # 2. update CITATION.cff
       - run: ./build.sh --update-cite ${{needs.publish_zenodo.outputs.doi}}
       
       # 3. push the change back to master
       - name: push
-        run: |
-          git config user.name railtoolkit
-          git config user.email railtoolkit@ownx.net
-          git add CITATION.cff
-          git commit -m "DOI updated to ${{needs.create_package.outputs.version}} (via github action)"
-          git push
-
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "DOI updated to ${{needs.create_package.outputs.version}} (via github action)"
+          branch: master
+          file_pattern: CITATION.cff
+          commit_user_name: railtoolkit
+          commit_user_email: railtoolkit@ownx.net
+    
   publish_twitter:
     needs: [create_package, publish_zenodo]
     name: "tweet about it!"
     runs-on: ubuntu-latest
     steps:
-    - uses: devigned/go-twitter-action@v1
+    - uses: infraway/tweet-action@v1
       with:
-        message: "The version ${{needs.create_package.outputs.version}} of TikZ-trackschematic is available! DOI: https://doi.org/${{needs.publish_zenodo.outputs.doi}}"
-        apiKey: ${{ secrets.TWITTER_API_KEY }}
-        apiKeySecret: ${{ secrets.TWITTER_API_SECRET }}
-        accessToken: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-        accessTokenSecret: ${{ secrets.TWITTER_ACCESS_SECRET }}
+        status: "The version ${{needs.create_package.outputs.version}} of TikZ-trackschematic is available! DOI: https://doi.org/${{needs.publish_zenodo.outputs.doi}}"
+        api_key: ${{ secrets.TWITTER_API_KEY }}
+        api_key_secret: ${{ secrets.TWITTER_API_KEY_SECRET }}
+        access_token: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+        access_token_secret: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
